# actionmailbox-imap

./: .gitignore  .standard.yml  CLIENT.md  Cargo.toml  Gemfile  MIT-LICENSE  README.md  Rakefile  actionmailbox-imap  actionmailbox-imap.gemspec
.circleci/: config.yml
config/: actionmailbox_imap.yaml  actionmailbox_imap_all.yaml  actionmailbox_imap_minimum.yml
examples/: client.service
lib/actionmailbox/: imap.rb
lib/actionmailbox/imap/: mailbox.rb  message.rb  messages.rb  railtie.rb  result.rb  version.rb
lib/actionmailbox/imap/adapters/: net_imap.rb
lib/generators/imap/: install_generator.rb
lib/generators/imap/templates/: config.yaml  config.yml
lib/tasks/actionmailbox/: ingress.rake
src/: configuration.rs  imap_client.rs  imap_session.rs  main.rs  processor.rs
test/: test_helper.rb
test/actionmailbox/: imap_test.rb
test/actionmailbox/imap/: mailbox_test.rb  message_test.rb  messages_test.rb  result_test.rb
test/actionmailbox/imap/adapters/: net_imap_test.rb
test/dummy/config/: application.rb
test/tasks/actionmailbox/: ingress_test.rb
