[package]
name = "actionmailbox-imap"
version = "0.2.4"
authors = ["Ethan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "1.0.2"
native-tls = "0.2.3"
config = "0.9.3"
threadpool = "1.7.1"
ctrlc = "3.1.3"
serde = { version = "1.0.99", features = ["derive"] }
clap = "2.33.0"